[gd_scene load_steps=2 format=3 uid="uid://dofbqsavfq8v6"]

[ext_resource type="Script" path="res://Themes/TestBed.gd" id="1"]

[node name="Node" type="Node"]
script = ExtResource("1")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="TaskBar" type="Panel" parent="GUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="Label" type="Label" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 23.0
offset_top = 20.0
offset_right = 81.0
offset_bottom = 46.0
text = "Theme:"

[node name="Themes" type="OptionButton" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 92.0
offset_top = 16.0
offset_right = 254.0
offset_bottom = 47.0

[node name="Button" type="Button" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 264.0
offset_top = 16.0
offset_right = 392.0
offset_bottom = 47.0
text = "Controls"

[node name="Button2" type="Button" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 400.0
offset_top = 16.0
offset_right = 528.0
offset_bottom = 47.0
text = "Alert Dialog"

[node name="Button3" type="Button" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 536.0
offset_top = 16.0
offset_right = 664.0
offset_bottom = 47.0
text = "Confirm Dialog"

[node name="Button4" type="Button" parent="GUI/TaskBar"]
layout_mode = 0
offset_left = 672.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 47.0
text = "File Dialog"

[connection signal="item_selected" from="GUI/TaskBar/Themes" to="." method="_on_Themes_item_selected"]
[connection signal="button_up" from="GUI/TaskBar/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="GUI/TaskBar/Button2" to="." method="_on_Alert_button_up"]
[connection signal="button_up" from="GUI/TaskBar/Button3" to="." method="_on_Confirm_button_up"]
[connection signal="button_up" from="GUI/TaskBar/Button4" to="." method="_on_File_button_up"]
